// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parses translation units parses single trans-unit 1`] = `
Array [
  Array [
    Object {
      "data": "target",
      "nodeType": "open",
      "type": "tag",
    },
    Object {
      "data": "Предложение о чем-то",
      "type": "text",
    },
    Object {
      "data": "target",
      "nodeType": "close",
      "type": "tag",
    },
  ],
]
`;

exports[`parses translation units parses sources when targets are absent with useSource flag enabled 1`] = `
Array [
  Array [
    Object {
      "data": "target",
      "nodeType": "open",
      "type": "tag",
    },
    Object {
      "data": "Предложение о чем-то",
      "type": "text",
    },
    Object {
      "data": "target",
      "nodeType": "close",
      "type": "tag",
    },
  ],
  Array [
    Object {
      "data": "target",
      "nodeType": "open",
      "type": "tag",
    },
    Object {
      "data": "Фрагмент Текста",
      "type": "text",
    },
    Object {
      "data": "target",
      "nodeType": "close",
      "type": "tag",
    },
  ],
]
`;

exports[`parses translation units parses targets 1`] = `
Array [
  Array [
    Object {
      "data": "target",
      "nodeType": "open",
      "type": "tag",
    },
    Object {
      "data": "Предложение о чем-то",
      "type": "text",
    },
    Object {
      "data": "target",
      "nodeType": "close",
      "type": "tag",
    },
  ],
  Array [
    Object {
      "data": "target",
      "nodeType": "open",
      "type": "tag",
    },
    Object {
      "data": "Фрагмент Текста",
      "type": "text",
    },
    Object {
      "data": "target",
      "nodeType": "close",
      "type": "tag",
    },
  ],
]
`;

exports[`parses translation units with <g> and <x> tags parses strong wrapped in <g> tags 1`] = `
Array [
  Array [
    Object {
      "data": "target",
      "nodeType": "open",
      "type": "tag",
    },
    Object {
      "data": "Предложение номер ",
      "type": "text",
    },
    Object {
      "data": "g",
      "equivText": "**",
      "nodeType": "open",
      "syntax": "strong",
      "type": "tag",
    },
    Object {
      "data": "один",
      "type": "text",
    },
    Object {
      "data": "g",
      "equivText": "**",
      "nodeType": "close",
      "syntax": "strong",
      "type": "tag",
    },
    Object {
      "data": ".",
      "type": "text",
    },
    Object {
      "data": "target",
      "nodeType": "close",
      "type": "tag",
    },
  ],
]
`;
